[project]
name = "hexlet_code"           
version = "0.1.0"              
description = "Brain Games project"  
authors = [{ name = "Nikita" }]       
readme = "README.md"           

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"